# grid-guide

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md
.github/workflows/: gates.yml  release.yml
docs/catalogs/: Katalog-pdf.md  Katalog-xlsx.md
docs/plan/adr/: 0001-documentation-and-planning-structure.md  0002-frontend-stack-sveltekit.md  0003-desktop-runtime-tauri.md  0004-quality-gates-and-coverage-tooling.md  0005-ci-release-tauri-action.md  README.md
docs/plan/planning/done/: 001-architecture-md-skeleton.md  M1-Slice-Plan-results.md  M1-Slice-Plan.md  README.md
docs/plan/planning/in-progress/: M1-Slice-Plan.md  M2-Slice-Plan.md  README.md  roadmap.md
docs/plan/planning/next/: M1-Slice-Plan.md  M2-Slice-Plan.md  README.md
docs/plan/planning/open/: 001-architecture-md-skeleton.md  002-datei-schema-adr.md  003-regel-repraesentation-adr.md  004-pdf-xlsx-library-adr.md  005-frontend-state-management-adr.md  006-dependency-update-automation-adr.md  007-e2e-test-stack-adr.md  008-tauri-csp-policy-adr.md  009-tauri-capability-permissions-adr.md  010-apt-snapshot-pinning.md  011-bundle-reproducibility.md  012-rustsec-allowlist-revisit.md  013-rust-bootstrap-coverage-exception.md  015-release-workflow-validierung.md  016-windows-test-runtime-setup.md  017-coverage-critical-mechanism.md  README.md
frontend/: .prettierignore  .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte  page.test.ts
scripts/: docker-entrypoint-ci-bundle.sh  docker-entrypoint-coverage-report.sh  docker-entrypoint-lock-refresh.sh  repro-check.sh
spec/: architecture.md  lastenheft.md
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/driven/: mod.rs
src-tauri/src/adapters/driving/: mod.rs
src-tauri/src/hexagon/: mod.rs
src-tauri/src/hexagon/core/: mod.rs
src-tauri/src/hexagon/core/domain/: document.rs  error.rs  falltyp.rs  formularlink.rs  mod.rs  profile.rs  profilversion.rs  project.rs  warning.rs
src-tauri/src/hexagon/core/vocab/: anlagenart.rs  dokumenttyp.rs  falltyp.rs  katalogstatus.rs  mod.rs  nachnutzungsstatus.rs  profiltyp.rs  quellkatalog.rs  xlsx_zweck.rs  zugangsart.rs
src-tauri/src/hexagon/ports/: mod.rs
src-tauri/src/hexagon/ports/driven/: mod.rs
src-tauri/src/hexagon/ports/driving/: mod.rs
tests/arch-fixtures/: README.md
tests/arch-fixtures/core/: bad_framework_import.rs  bad_pub_re_export.rs
tests/arch-fixtures/ports/: bad_impl_block.rs
tools/: arch-check.sh  coverage-critical.py  coverage-critical.sh
