[workspace]
resolver = "2"

[package]
name = "gridguide"
version = "0.0.0"
edition = "2021"
rust-version = "1.84"
license = "MIT"
publish = false
description = "Lokaler Tauri-Desktop-Assistent fuer Netz- und Behoerdenantraege (siehe spec/lastenheft.md)"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
