[workspace]
resolver = "2"

[package]
name = "gridguide"
version = "0.0.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"
publish = false
description = "Lokaler Tauri-Desktop-Assistent fuer Netz- und Behoerdenantraege (siehe spec/lastenheft.md)"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Bekannt-noisy bei Tauri-2.x-Macros (generate_handler!, generate_context!,
# #[command]) und serde-Derives. Werden in M2..M7 fall-spezifisch geprueft.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
uninlined_format_args = "allow"
